--- a/uia/package.json
+++ b/uia/package.json
@@ -2,12 +2,16 @@
   "name": "uia",
   "version": "0.1.0",
   "private": true,
-
   "proxy": "http://localhost:4038",
-
   "dependencies": {
+    "i18next": "^8.4.3",
+    "i18next-browser-languagedetector": "^2.0.0",
+    "i18next-xhr-backend": "^1.4.2",
+    "normalize.css": "^7.0.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-burger-menu": "^2.1.4",
+    "react-dom": "^15.6.1",
+    "react-i18next": "^4.6.2"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
