--- a/ui715/package.json
+++ b/ui715/package.json
@@ -30,10 +30,14 @@
   },
   "dependencies": {
     "bulma": "^0.4.3",
+    "font-awesome": "^4.7.0",
+    "i18next": "^8.4.3",
     "lodash": "^4.17.4",
     "normalize.css": "^7.0.0",
     "radium": "^0.19.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-burger-menu": "^2.1.4",
+    "react-dom": "^15.6.1",
+    "react-i18next": "^4.7.0"
   }
 }
