--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "async": "^2.5.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "bootstrap": "^4.0.0-beta",
     "bulma": "^0.4.2",
+    "color": "^2.0.0",
     "express": "^4.15.3",
     "font-awesome": "^4.7.0",
+    "immutable": "^3.8.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.29",
