--- a/pub/ui8/package.json
+++ b/pub/ui8/package.json
@@ -10,12 +10,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
     "bundle-collapser": "^1.2.1",
+    "del": "^3.0.0",
     "envify": "^4.1.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
-    "uglify-js": "^3.0.27",
+    "uglify-js": "^3.0.28",
     "uglifyify": "^4.0.3"
+  },
+  "dependencies": {
+    "bootstrap": "^4.0.0-beta",
+    "immutable": "^3.8.1",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
